--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ h1 {letter-spacing: 6px}
 
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
-      <a href="#" class="w3-bar-item w3-button">Home</a>
-      <a href="#" class="w3-bar-item w3-button w3-light-grey">Portfolio</a>
+      <a href="#" class="w3-bar-item w3-button w3-light-grey">Home</a>
+      <a href="#" class="w3-bar-item w3-button">Portfolio</a>
       <a href="#" class="w3-bar-item w3-button">About Me</a>
     </div>
   </div>
