--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ h1 {letter-spacing: 6px}
 
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
-      <a href="Home" class="w3-bar-item w3-button w3-light-grey">Home</a>
+      <a href="https://madeleine24stone.github.io/#" class="w3-bar-item w3-button w3-light-grey">Home</a>
       <a href="#" class="w3-bar-item w3-button">Portfolio</a>
       <a href="#" class="w3-bar-item w3-button">About Me</a>
     </div>
@@ -49,3 +49,7 @@ h1 {letter-spacing: 6px}
 
 </body>
 </html>
+
+</html>
+<head>
+<title>
