--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ h1 {letter-spacing: 6px}
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
       <a href="https://madeleine24stone.github.io/#" class="w3-bar-item w3-button w3-light-grey">Home</a>
-      <a href="https://madeleine24stone.github.io/portfolio" class="w3-bar-item w3-button">Portfolio</a>
+      <a href="https://madeleine24stone.github.io/Portfolio" class="w3-bar-item w3-button">Portfolio</a>
       <a href="#" class="w3-bar-item w3-button">About Me</a>
     </div>
   </div>
@@ -51,7 +51,7 @@ h1 {letter-spacing: 6px}
 </html>
 
 <!DOCTYPE html>
-</html> https://madeleine24stone.github.io/portfolio
+</html> https://madeleine24stone.github.io/Portfolio
 <head>
 <title>Portfolio</title>
 <meta charset="UTF-8">
