--- a/portfolio.html
+++ b/portfolio.html
@@ -22,5 +22,14 @@ h1 {letter-spacing: 6px}
     <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
       <h1 class="w3-xlarge">Portfolio Examples</h1>
       <h1>Madeleine Stone </h1>
+
+      <div class="w3-padding-32">
+        <div class="w3-bar w3-border">
+          <a href="https://madeleine24stone.github.io/#" class="w3-bar-item w3-button w3-light-grey">Home</a>
+          <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
+          <a href="#" class="w3-bar-item w3-button">About Me</a>
+        </div>
+      </div>
+    </header>
 <!-- End Page Content -->
   </html>
