--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ h1 {letter-spacing: 6px}
     <div class="w3-bar w3-border">
       <a href="https://madeleine24stone.github.io/#" class="w3-bar-item w3-button w3-light-grey">Home</a>
       <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
-      <a href="#" class="w3-bar-item w3-button">About Me</a>
+      <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
     </div>
   </div>
 </header>
