--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1 {letter-spacing: 6px}
 
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">College Student, Multimedia</h1>
+  <h1 class="w3-xlarge">COLLEGE STUDENT, MULTIMEDIA</h1>
   <h1>Madeleine Stone </h1>
 
 
