--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@ h1 {letter-spacing: 6px}
       <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
     </div>
   </div>
+
+  <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
+    <h1 class="w3-xlarge">PHOTOGRAPHER</h1>
+      <h1>John Doe</h1>
+
 </header>
+
 
 
 
