--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ h1 {letter-spacing: 6px}
   </div>
 
   <header class="w3-panel w3-center w3-opacity" style="padding:60px 16px">
-    <h2 class="w3-xlarge">PHOTOGRAPHER</h2>
-      <h2>John Doe</h2>
-
+    <h2 class="w3-xlarge">CONTACT ME</h2>
+    <a href = "madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">VIA EMAIL</a>
+  </header>
 </header>
 
 
