--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ h1 {letter-spacing: 6px}
 
   <header class="w3-panel w3-center w3-opacity" style="padding:60px 16px">
     <h2 class="w3-xlarge">CONTACT ME</h2>
-    <a href = "https://mail.google.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a>
+    <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a>
   </header>
 </header>
 
