--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@ h1 {letter-spacing: 6px}
   </div>
 
   <header class="w3-panel w3-center w3-opacity" style="padding:30px 16px">
-    <h2 class="w3-xlarge">CONTACT ME</h2>
+    <h2 class="w3-xlarge">EMAIL ME</h2>
     <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a>
-    <a href = "tel:+1-443-813-2051" target="_blank" class="w3-hover-text-green">443-813-2051</a>
   </header>
 </header>
 
