--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@ h1 {letter-spacing: 6px}
   </header>
 </header>
 
-
+<header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
+  <h2 class="w3-xlarge">EMAIL ME</h2>
+  <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a>
+  </header>
+</header>
 
 
 
