--- a/index.html
+++ b/index.html
@@ -34,13 +34,8 @@ h1 {letter-spacing: 6px}
 
   <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
     <h2 class="w3-xlarge">EMAIL ME</h2>
+    <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a><br>
     <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a>
-  </header>
-</header>
-
-<header class="w3-panel w3-center w3-opacity" style="padding:10px 13px">
-  <h2 class="w3-xlarge">EMAIL ME</h2>
-  <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a>
   </header>
 </header>
 
