--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,10 @@ h1 {letter-spacing: 6px}
           <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
         </div>
       </div>
+
+      <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
+        <h2 class="w3-xlarge">AUDIO PRODUCTION</h2>
+      </header>
     </header>
 
 <!-- End Page Content -->
