--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,9 @@ h1 {letter-spacing: 6px}
         <audio controls>
           <source src="MStone_ClassActivity_Multitrack1 Mixdown 2.wav" type="audio/wav">
           </audio>
+
+      <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
+        <h2 class="w3-xlarge">AUDIO PRODUCTION</h2>
       </header>
     </header>
 
