--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@ h1 {letter-spacing: 6px}
           </audio>
 
       <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
-        <h2 class="w3-xlarge">AUDIO PRODUCTION</h2>
+        <h2 class="w3-xlarge">FILM PRODUCTION</h2>
       </header>
     </header>
 
