--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,8 @@ h1 {letter-spacing: 6px}
         </div>
       </div>
 
-      <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
-        <h2 class="w3-xlarge">AUDIO PRODUCTION</h2>
+      <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px"><b>
+        <h2 class="w3-xlarge">AUDIO PRODUCTION</h2></b>
         <audio controls>
           <source src="Stone-Game4_.wav" type="audio/wav">
           </audio>
