--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@ h1 {letter-spacing: 6px}
       </div>
 
       <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px"><b>
-        <h2 class="w3-xlarge">AUDIO PRODUCTION</h2></b>
+        <h2 class="bold-heading">AUDIO PRODUCTION</h2>
         <audio controls>
           <source src="Stone-Game4_.wav" type="audio/wav">
           </audio>
