--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,8 @@
 <style>
 body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
+body,h2 {font-family: "Raleway", Arial, sans-serif}
+h2 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 </head>
