--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <style>
 body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
-body,h2 {font-family: "Raleway", Arial, sans-serif}
+body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
 h2 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
