--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,10 @@ h2 {letter-spacing: 6px}
 
       <div class="w3-padding-32">
         <div class="w3-bar w3-border">
-          <a href="index.html" class="w3-bar-item w3-button">Home</a>
+        <h1> <a href="index.html" class="w3-bar-item w3-button">Home</a>
           <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
           <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
-        </div>
+    </h1> </div>
       </div>
 
       <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px"><b>
