--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,8 @@ body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
 body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
 h2 {letter-spacing: 6px}
+body,h3 {font-family: "Raleway", Arial, sans-serif}
+h3 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 </head>
@@ -27,10 +29,10 @@ h2 {letter-spacing: 6px}
 
       <div class="w3-padding-32">
         <div class="w3-bar w3-border">
-        <h1> <a href="index.html" class="w3-bar-item w3-button">Home</a>
+        <h3> <a href="index.html" class="w3-bar-item w3-button">Home</a>
           <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
           <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
-    </h1> </div>
+    </h3> </div>
       </div>
 
       <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px"><b>
