--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
 body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
 h2 {letter-spacing: 6px}
+body,h5 {font-family: "Raleway", Arial, sans-serif}
+h5 {letter-spacing: 1px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 </head>
@@ -28,10 +30,10 @@ h2 {letter-spacing: 6px}
 
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
-      <a href="index.html" class="w3-bar-item w3-button">Home</a>
+    <h5>  <a href="index.html" class="w3-bar-item w3-button">Home</a>
       <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
       <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
-    </div>
+<h5> </div>
   </div>
 
   <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
