--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,9 @@ h5 {letter-spacing: 1px}
 
       <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
         <h2 class="w3-xlarge">FILM PRODUCTION</h2>
+        <video width="320" height="240" controls>
+          <source src="MaddyStone-SinkingTime-Montage.mp4" type="video/mp4">
+          </video>
       </header>
     </header>
 
