--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,10 @@ h5 {letter-spacing: 1px}
         <h2 class="w3-xlarge">FILM PRODUCTION</h2>
         <video width="640" height="360" controls>
           <source src="MStone_Trail_Of_Light_FinalEdit.mp4" type="video/mp4">
+          </video><br>
+
+        <video width="480" height="270" controls>
+          <source src="MaddyStone_SinkingTime_Montage.mp4" type="video/mp4">
           </video>
       </header>
     </header>
