--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@ h5 {letter-spacing: 1px}
       </div>
 
       <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px"><b>
-        <h2 class="w3-xlarge">AUDIO PRODUCTION</h2>
+        <h2 class="w3-xlarge">AUDIO AND VIDEO PRODUCTION</h2>
         <audio controls>
           <source src="Stone-Game4_.wav" type="audio/wav">
           </audio>
@@ -46,8 +46,6 @@ h5 {letter-spacing: 1px}
           <source src="MStone_ClassActivity_Multitrack1 Mixdown 2.wav" type="audio/wav">
           </audio>
 
-      <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
-        <h2 class="w3-xlarge">FILM PRODUCTION</h2>
         <video width="640" height="360" controls>
           <source src="MStone_Trail_Of_Light_FinalEdit.mp4" type="video/mp4">
           </video><br>
