--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@ h5 {letter-spacing: 1px}
 
         <audio controls>
           <source src="MStone_ClassActivity_Multitrack1 Mixdown 2.wav" type="audio/wav">
-          </audio>
+          </audio><br>
 
         <video width="640" height="360" controls>
           <source src="MStone_Trail_Of_Light_FinalEdit.mp4" type="video/mp4">
