--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@ h5 {letter-spacing: 1px}
     </h5> </div>
       </div>
 
-      <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px"><b>
+      <header class="w3-panel w3-center w3-opacity-min" style="padding:10px 16px"><b>
         <h2 class="w3-xlarge">AUDIO AND VIDEO PRODUCTION</h2>
         <audio controls>
           <source src="Stone-Game4_.wav" type="audio/wav">
