--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h5 {letter-spacing: 1px}
 <h5> </div>
   </div>
 
-  <header class="w3-panel w3-center w3-opacity" style="padding:10px 16px">
+  <header class="w3-panel w3-center" style="padding:10px 16px">
     <h2 class="w3-xlarge">EMAIL OR CALL ME</h2>
     <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a><br>
     <a href = "tel:+1-443-813-2051" target="_blank" class="w3-hover-text-green">443-813-2051</a>
