--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,9 @@ h5 {letter-spacing: 1px}
     </h5> </div>
       </div>
 
+  <a href="audio.html"><img src="Screenshot 2025-10-31 182802.jpg" alt="audio pieces"
+    style="width:42px;height:42px;"></a>
+
       <header class="w3-panel w3-center" style="padding:10px 16px"><b>
         <h2 class="w3-xlarge">AUDIO AND VIDEO PRODUCTION</h2>
         <audio controls>
