--- a/audio.html
+++ b/audio.html
@@ -27,6 +27,15 @@
       <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
         <h1 class="w3-xlarge">COLLEGE STUDENT, MULTIMEDIA</h1>
         <h1>Madeleine Stone </h1>
+
+        <div class="w3-padding-32">
+          <div class="w3-bar w3-border">
+          <h5> <a href="index.html" class="w3-bar-item w3-button">Home</a>
+            <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
+            <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
+      </h5> </div>
+        </div>
+        
       </header>
     </header>
   </html>
