--- a/audio.html
+++ b/audio.html
@@ -35,7 +35,13 @@
             <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
       </h5> </div>
         </div>
-        
+        <audio controls>
+          <source src="Stone-Game4_.wav" type="audio/wav">
+          </audio>
+
+        <audio controls>
+          <source src="MStone_ClassActivity_Multitrack1 Mixdown 2.wav" type="audio/wav">
+          </audio>
       </header>
     </header>
   </html>
