--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@ h5 {letter-spacing: 1px}
     </h5> </div>
       </div>
 
-  <a href="audio.html"><img src="Screenshot 2025-10-31 182802.jpg" alt="audio pieces"
-    style="width:300px;height:300px;"></a>
+  <a href="audio.html"><img src="Audiotab.jpg" alt="audio pieces"
+    style="width:150px;height:150px;"></a>
 
       <header class="w3-panel w3-center" style="padding:10px 16px"><b>
         <h2 class="w3-xlarge">AUDIO AND VIDEO PRODUCTION</h2>
