--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,10 @@ h5 {letter-spacing: 1px}
   </div>
 
   <a href="audio.html"><img src="Audiotab.jpg" alt="audio pieces"
-    style="width:200px;height:200px;"></a>
+    style="width:200px;height:200px;"></a><br>
+
+  <a href="video.html"><img src="videotab.jpg" alt="video pieces"
+    style="width:200px;height:200px;"</a>
 
       <header class="w3-panel w3-center" style="padding:10px 16px"><b>
         <video width="640" height="360" controls>
