--- a/video.html
+++ b/video.html
@@ -1,1 +1,21 @@
 <!DOCTYPE html>
+</html>
+<head>
+  <title>Video Pieces</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+  body,h1 {font-family: "Raleway", Arial, sans-serif}
+  h1 {letter-spacing: 6px}
+  body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
+  h2 {letter-spacing: 6px}
+  h2 {opacity: 1.0}
+  body,h5 {font-family: "Raleway", Arial, sans-serif}
+  h5 {letter-spacing: 1px}
+  .w3-row-padding img {margin-bottom: 12px}
+  </style>
+  </head>
+  <body>
