--- a/video.html
+++ b/video.html
@@ -19,3 +19,14 @@
   </style>
   </head>
   <body>
+
+    <!-- !PAGE CONTENT! -->
+    <div class="w3-content" style="max-width:1500px">
+
+      <!-- Header -->
+      <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
+        <h1 class="w3-xlarge">COLLEGE STUDENT, MULTIMEDIA</h1>
+        <h1>Madeleine Stone </h1>
+      </header>
+    </header>
+  </html>
