--- a/video.html
+++ b/video.html
@@ -35,6 +35,15 @@
             <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
       </h5> </div>
         </div>
+
+        <header class="w3-panel w3-center" style="padding:10px 16px"><b>
+          <video width="640" height="360" controls>
+            <source src="MStone_Trail_Of_Light_FinalEdit.mp4" type="video/mp4">
+            </video><br>
+
+          <video width="480" height="270" controls>
+            <source src="MaddyStone_SinkingTime_Montage.mp4" type="video/mp4">
+            </video>  
       </header>
     </header>
   </html>
