--- a/audio.html
+++ b/audio.html
@@ -25,7 +25,7 @@
 
       <!-- Header -->
       <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-        <h1 class="w3-xlarge">COLLEGE STUDENT, MULTIMEDIA</h1>
+        <h1 class="w3-xlarge">AUDIO WORK</h1>
         <h1>Madeleine Stone </h1>
 
         <div class="w3-padding-32">
