--- a/video.html
+++ b/video.html
@@ -25,7 +25,7 @@
 
       <!-- Header -->
       <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-        <h1 class="w3-xlarge">COLLEGE STUDENT, MULTIMEDIA</h1>
+        <h1 class="w3-xlarge">FILM EDITING</h1>
         <h1>Madeleine Stone </h1>
 
         <div class="w3-padding-32">
@@ -43,7 +43,7 @@
 
           <video width="480" height="270" controls>
             <source src="MaddyStone_SinkingTime_Montage.mp4" type="video/mp4">
-            </video>  
+            </video>
       </header>
     </header>
   </html>
