--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,7 @@ h5 {letter-spacing: 1px}
     </h5> </div>
   </div>
 
+<header class="w3-panel w3-center" style="padding:10px 16px">
   <a href="audio.html"><img src="Audiotab.jpg" alt="audio pieces"
     style="width:200px;height:200px;"></a><br>
 
