--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,9 @@ h5 {letter-spacing: 1px}
     style="width:200px;height:200px; opacity:1.0"></a><br>
 
   <a href="video.html"><img src="videotab.jpg" alt="video pieces"
+    style="width:200px;height:200px;"</a><br>
+
+  <a href="screenwriting.html"><img src="screenwritingtab.jpg" alt="writing pieces"
     style="width:200px;height:200px;"</a>
 
       </header>
