--- a/screenwriting.html
+++ b/screenwriting.html
@@ -28,6 +28,14 @@
         <h1 class="w3-xlarge">SCREEN WRITING</h1>
         <h1>Madeleine Stone </h1>
 
+        <div class="w3-padding-32">
+          <div class="w3-bar w3-border">
+          <h5> <a href="index.html" class="w3-bar-item w3-button">Home</a>
+            <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
+            <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
+      </h5> </div>
+        </div>
+
       </header>
     </header>
   </html>
