--- a/aboutme.html
+++ b/aboutme.html
@@ -25,11 +25,13 @@ h1 {letter-spacing: 6px}
 
       <div class="w3-padding-32">
         <div class="w3-bar w3-border">
-          <a href="index.html" class="w3-bar-item w3-button">Home</a>
+        <h5>  <a href="index.html" class="w3-bar-item w3-button">Home</a>
           <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
           <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
-        </div>
+    </h5> </div>
       </div>
+
     </header>
+  </header>
 
 <html>
