--- a/aboutme.html
+++ b/aboutme.html
@@ -36,6 +36,8 @@ h5 {letter-spacing: 1px}
     </h5> </div>
       </div>
 
+      <header class="w3-panel w3-center" style="padding:10px 16px">
+        <h2 class="w3-xlarge">EMAIL OR CALL ME</h2>
     </header>
   </header>
 
