--- a/aboutme.html
+++ b/aboutme.html
@@ -37,7 +37,7 @@ h5 {letter-spacing: 1px}
       </div>
 
       <header class="w3-panel w3-center" style="padding:10px 16px">
-        <h2 class="w3-xlarge">EMAIL OR CALL ME</h2>
+        <h2 class="w3-xlarge">BIOGRAPHY</h2>
     </header>
   </header>
 
