--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,9 @@ h5 {letter-spacing: 1px}
 
       <header class="w3-panel w3-center" style="padding:10px 16px">
         <h2 class="w3-xlarge">BIOGRAPHY</h2>
+        <p>Madeleine Stone is a third-year student at Howard Community College</p>
     </header>
   </header>
+
 
 <html>
