--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,7 @@ h2 {letter-spacing: 6px}
 h2 {opacity: 1.0}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
 h5 {letter-spacing: 1px}
+p {font-size: 16px;}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 </head>
