--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,8 @@ p {font-size: 16px;}
 
       <header class="w3-panel w3-center" style="padding:10px 16px">
         <h2 class="w3-xlarge">BIOGRAPHY</h2>
-        <p>Madeleine Stone is a third-year student at Howard Community College who is currently</p>
+        <p>Madeleine Stone is a third-year student at Howard Community College who is currently<br>
+        </p>
     </header>
   </header>
 
