--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,7 @@ p {font-size: 16px;}
 
       <header class="w3-panel w3-center" style="padding:10px 16px">
         <h2 class="w3-xlarge">BIOGRAPHY</h2>
-        <p>Madeleine Stone is a third-year student at Howard Community College who is currently<br>majoring in Audio Video Media Production with a goal of obtaining a job</p>
+        <p>Madeleine Stone is a third-year student at Howard Community College who is currently<br>majoring in Audio Video Media Production with a goal of obtaining a job that<br>includes sound mixing</p>
     </header>
   </header>
 
