--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,6 @@ h2 {opacity: 1.0}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
 h5 {letter-spacing: 1px}
 p {font-size: 16px;}
-<p style="text-align: left;"
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 </head>
@@ -40,7 +39,7 @@ p {font-size: 16px;}
 
       <header class="w3-panel w3-center" style="padding:10px 16px">
         <h2 class="w3-xlarge">BIOGRAPHY</h2>
-        <p>Madeleine Stone is a third-year student at Howard Community College who is currently<br>majoring in Audio Video Media Production with a goal of obtaining a job that includes<br>sound mixing and video editing. Her love of music stemmed from her early childhood<br>when she would listen to different jazz artists at night as a way for her to sleep better.<br>That love only grew as time passed and she participated in different choir groups for a total<br>of nine years. Those years really helped her understand the different emotions certain<br>songs could provoke. She started to explore the concept of video editing and sound mixing<br>in 2019 when the huge pandemic hit.</p>
+        <p style="text-align: left;"> Madeleine Stone is a third-year student at Howard Community College who is currently<br>majoring in Audio Video Media Production with a goal of obtaining a job that includes<br>sound mixing and video editing. Her love of music stemmed from her early childhood<br>when she would listen to different jazz artists at night as a way for her to sleep better.<br>That love only grew as time passed and she participated in different choir groups for a total<br>of nine years. Those years really helped her understand the different emotions certain<br>songs could provoke. She started to explore the concept of video editing and sound mixing<br>in 2019 when the huge pandemic hit.</p>
         <p>Being able to combine different</p>
     </header>
   </header>
