--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@ h5 {letter-spacing: 1px}
 
 <header class="w3-panel w3-center" style="padding:10px 16px">
   <a href="audio.html"><img src="Audiotab.jpg" alt="audio pieces"
-    style="width:200px;height:200px; opacity:1.0"></a><br>
+    style="width:200px;height:200px; align:left; opacity:1.0"></a>
 
   <a href="video.html"><img src="videotab.jpg" alt="video pieces"
     style="width:200px;height:200px;"</a><br>
