--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@ h5 {letter-spacing: 1px}
     style="width:200px;height:200px; align:left; opacity:1.0"></a>
 
   <a href="video.html"><img src="videotab.jpg" alt="video pieces"
-    style="width:200px;height:200px;"</a><br>
+    style="width:200px;height:200px; align:center;"</a>
 
   <a href="screenwriting.html"><img src="screenwritingtab.jpg" alt="writing pieces"
     style="width:200px;height:200px;"</a>
