--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ h5 {letter-spacing: 1px}
   <header class="w3-panel w3-center" style="padding:10px 16px">
     <h2 class="w3-xlarge">CONNECT WITH ME ONLINE</h2>
     <a href = "mailto:madeleine15.stone@gmail.com"><img src="mailicon.jpg" style="width:100px;height:100px; align:left"></a>
-    <a href = "tel:+1-443-813-2051" target="_blank" class="w3-hover-text-green">443-813-2051</a>
+    <a href = "tel:+1-443-813-2051"><img src="free-phone-icon-504-thumb.jpg" style="width:100px;height:100px"></a>
   </header>
 </header>
 
