--- a/aboutme.html
+++ b/aboutme.html
@@ -13,6 +13,7 @@ h1 {letter-spacing: 6px}
 body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
 h2 {letter-spacing: 6px}
 h2 {opacity: 1.0}
+h2 {text-align: left}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
 h5 {letter-spacing: 1px}
 p {font-size: 16px;}
