--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,13 @@ h5 {letter-spacing: 1px}
 
 <header class="w3-panel w3-center" style="padding:10px 16px">
   <a href="audio.html"><img src="Audiotab.jpg" alt="audio pieces"
-    style="width:200px;height:200px; align:left; opacity:1.0"></a>
+    style="width:200px;height:200px; align:left; opacity:1.0"></a><br>
 
   <a href="video.html"><img src="videotab.jpg" alt="video pieces"
-    style="width:200px;height:200px; align:center;"</a>
+    style="width:200px;height:200px; align:left;"></a><br>
 
   <a href="screenwriting.html"><img src="screenwritingtab.jpg" alt="writing pieces"
-    style="width:200px;height:200px;"</a>
+    style="width:200px;height:200px; align:left;"></a>
 
       </header>
     </header>
