--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,7 @@ p {font-size: 16px;}
       <header class="w3-panel w3-center" style="padding:10px 16px">
         <h2 class="w3-xlarge">BIOGRAPHY</h2>
         <p style="text-align: justify;"> Madeleine Stone is a third-year student at Howard Community College who is currently<br>majoring in Audio Video Media Production with a goal of obtaining a job that includes<br>sound mixing and video editing. Her love of music stemmed from her early childhood<br>when she would listen to different jazz artists at night as a way for her to sleep better.<br>That love only grew as time passed and she participated in different choir groups for a total<br>of nine years. Those years really helped her understand the different emotions certain<br>songs could provoke. She started to explore the concept of video editing and sound mixing<br>in 2019 when the huge pandemic hit.</p>
-        <p style="text-align: justify;"> Being able to combine different videos with various audios started out as a way to pass time<br>but then led to something greater. In the spring of 2023 was when she opened her mind up to the idea of getting a career in the video production field.</p>
+        <p style="text-align: justify;"> Being able to combine different videos with various audios started out as a way to pass time<br>but then led to something greater. In the spring of 2023 was when she opened her mind up<br>to the idea of getting a career in the video production field.</p>
     </header>
   </header>
 
