--- a/aboutme.html
+++ b/aboutme.html
@@ -42,6 +42,8 @@ p {font-size: 16px;}
         <h2 class="w3-xlarge">BIOGRAPHY</h2>
         <p style="text-align: justify;"> Madeleine Stone is a third-year student at Howard Community College who is currently<br>majoring in Audio Video Media Production with a goal of obtaining a job that includes<br>sound mixing and video editing. Her love of music stemmed from her early childhood<br>when she would listen to different jazz artists at night as a way for her to sleep better.<br>That love only grew as time passed and she participated in different choir groups for a total<br>of nine years. Those years really helped her understand the different emotions certain<br>songs could provoke. She started to explore the concept of video editing and sound mixing<br>in 2019 when the huge pandemic hit.</p>
         <p style="text-align: justify;"> Being able to combine different videos with various audios started out as a way to pass time<br>but then led to something greater. In the spring of 2023 was when she opened her mind up<br>to the idea of getting a career in the video production field. She started attending HCC and had<br>multiple courses relating to sound mixing, video editing, storyboarding, and other topics related<br>to video production. Two years later she has used the skills that she obtained from all her<br>courses in some projects for school as well as personal projects as well. Her goals include<br>expanding her professional network, collaborating with experienced sound designers and mixers,<br>as well as creating a lasting and impactful legacy through her work. Madeleine hopes to<br>provoke insightful stories and emotions through her sound editing and audio engineering work. </p>
+
+      <h2 class="w3-xlarge">MY RESUME</h2>
     </header>
   </header>
 
