--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,7 @@ p {font-size: 16px;}
         <p style="text-align: justify;"> Being able to combine different videos with various audios started out as a way to pass time<br>but then led to something greater. In the spring of 2023 was when she opened her mind up<br>to the idea of getting a career in the video production field. She started attending HCC and had<br>multiple courses relating to sound mixing, video editing, storyboarding, and other topics related<br>to video production. Two years later she has used the skills that she obtained from all her<br>courses in some projects for school as well as personal projects as well. Her goals include<br>expanding her professional network, collaborating with experienced sound designers and mixers,<br>as well as creating a lasting and impactful legacy through her work. Madeleine hopes to<br>provoke insightful stories and emotions through her sound editing and audio engineering work. </p>
 
       <h2 class="w3-xlarge">MY RESUME</h2>
-      <a href ="ProfessionalResume (1).pdf" target="_blank" class="w3-hover-text-green">resume</a>
+      <a href ="ProfessionalResume (1).pdf" target="_blank" class="w3-hover-text-green" "align:left;">resume</a>
     </header>
   </header>
 
