--- a/aboutme.html
+++ b/aboutme.html
@@ -49,7 +49,7 @@ p {font-size: 16px;}
 
     <header class="w3-panel w3-center" style="padding:10px 16px">
       <h3 class="w3-xlarge">MY RESUME</h3>
-      <a href ="ProfessionalResume (1).pdf" target="_blank" class="w3-hover-text-green">resume</a>
+      <a href ="ProfessionalResume (1).pdf" target="_blank" class="w3-hover-text-green">link to resume</a>
     </header>
   </header>
 
