--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@ h2 {opacity: 1.0}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
 h5 {letter-spacing: 1px}
 .w3-row-padding img {margin-bottom: 12px}
+img {opacity: 1.0}
 </style>
 </head>
 <body>
@@ -38,7 +39,7 @@ h5 {letter-spacing: 1px}
 
 <header class="w3-panel w3-center" style="padding:10px 16px">
   <a href="audio.html"><img src="Audiotab.jpg" alt="audio pieces"
-    style="width:200px;height:200px; align:left; opacity:1.0"></a><br>
+    style="width:200px;height:200px; align:left;"></a><br>
 
   <a href="video.html"><img src="videotab.jpg" alt="video pieces"
     style="width:200px;height:200px; align:left;"></a><br>
