--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@ h2 {opacity: 1.0}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
 h5 {letter-spacing: 1px}
 .w3-row-padding img {margin-bottom: 12px}
-img {opacity: 1.0}
+img:hover {opacity: 1.0}
 </style>
 </head>
 <body>
