--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+a {opacity: 1.0;}
 body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
 body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
@@ -16,7 +17,7 @@ h2 {opacity: 1.0}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
 h5 {letter-spacing: 1px}
 .w3-row-padding img {margin-bottom: 12px}
-img:hover {opacity: 1.0}
+img:hover {opacity: 1.0;}
 </style>
 </head>
 <body>
@@ -42,7 +43,7 @@ img:hover {opacity: 1.0}
     style="width:200px;height:200px; align:left;"></a><br>
 
   <a href="video.html"><img src="videotab.jpg" alt="video pieces"
-    style="width:200px;height:200px; align:left;"></a><br>
+    style="width:200px;height:200px;"></a><br>
 
   <a href="screenwriting.html"><img src="screenwritingtab.jpg" alt="writing pieces"
     style="width:200px;height:200px; align:left;"></a>
