--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-a {opacity: 1;}
+a {
+  opacity: 1.0;
+}
 body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
 body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
