--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@ a {
     </h5> </div>
   </div>
 
-<header class="w3-panel w3-center" style="padding:10px 16px">
+<div class="w3-row-padding w3-center" style="margin-bottom:128px">
   <a href="audio.html"><img src="Audiotab.jpg" alt="audio pieces"
     style="width:200px;height:200px; align:left;"></a><br>
 
