--- a/portfolio.html
+++ b/portfolio.html
@@ -35,19 +35,16 @@ h5 {letter-spacing: 1px}
           <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
     </h5> </div>
   </div>
-
+</header>
 <div class="w3-row-padding w3-center" style="margin-bottom:128px">
   <a href="audio.html"><img src="Audiotab.jpg" alt="audio pieces"
-    style="width:200px;height:200px; align:left;"></a><br>
+    style="width:200px;height:200px;"></a><br>
 
   <a href="video.html"><img src="videotab.jpg" alt="video pieces"
     style="width:200px;height:200px;"></a><br>
 
   <a href="screenwriting.html"><img src="screenwritingtab.jpg" alt="writing pieces"
     style="width:200px;height:200px; align:left;"></a>
-
-      </header>
-    </header>
 
 <!-- End Page Content -->
   </html>
