--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@ h5 {letter-spacing: 1px}
       <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
 <h5> </div>
   </div>
+  </header>
 
-  <header class="w3-panel w3-center" style="padding:10px 16px">
+  <div class="w3-panel w3-center" style="padding:10px 16px">
     <h2 class="w3-xlarge">CONNECT WITH ME ONLINE</h2>
     <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a><br>
     <a href = "tel:+1-443-813-2051" target="_blank" class="w3-hover-text-green">443-813-2051</a><br>
     <a href = "https://www.linkedin.com/in/madeleine-stone-976b29389/"><img src="free-linkedin-icon-112-thumb.jpg" style="width:50px;height:50px"></a>
-  </header>
+
 </header>
 
 
