--- a/audio.html
+++ b/audio.html
@@ -36,6 +36,8 @@
       </h5> </div>
         </div>
       </header>
+
+      <header class="w3-panel w3-center" style="padding:10px 16px">
         <audio controls>
           <source src="Stone-Game4_.wav" type="audio/wav">
           </audio>
