--- a/video.html
+++ b/video.html
@@ -39,7 +39,8 @@
       </header>
 
         <header class="w3-panel w3-center" style="padding:10px 16px"><b>
-          <video width="640" height="360" controls>
+          <video width="640" height="360"
+          poster="bifscthumbnail.jpg" controls>
             <source src="MStone_Trail_Of_Light_FinalEdit.mp4" type="video/mp4">
             </video><br>
 
