--- a/video.html
+++ b/video.html
@@ -38,7 +38,7 @@
         </div>
       </header>
 
-        <header class="w3-panel w3-center-align w3-border-top w3-border-bottom w3-border-black" style="padding:10px 16px"><b>
+        <header class="w3-panel w3-center" style="padding:10px 16px"><b>
           <video width="640" height="360" align=center
           poster="bifscthumbnail.jpg" controls>
             <source src="MStone_Trail_Of_Light_FinalEdit.mp4" type="video/mp4">
