--- a/screenwriting.html
+++ b/screenwriting.html
@@ -39,7 +39,7 @@
       </header>
     </header>
 
-    <header class="w3-panel w3-center" style="padding:10px 16px">
+    <header class="w3-panel w3-center w3-border-bottom w3-border-black" style="padding:10px 16px">
       <h2 class="w3-xlarge">CHLOE SCREENWRITE</h2>
         <a href ="ChloeFinalDraft - Copy.pdf" target="_blank" class="w3-hover-text-green">link to script</a>
   </html>
