--- a/aboutme.html
+++ b/aboutme.html
@@ -25,8 +25,8 @@ p {font-size: 16px;}
 img {
   float: right;
   margin-left: 15px;
-  width: 200px;
-  height: 200px;
+  width: 500px;
+  height: 500px;
 }
 </style>
 </head>
@@ -53,7 +53,7 @@ img {
         <h2 class="w3-xlarge">BIOGRAPHY</h2>
         <img src = "MaddyPortfolioSelf.jpg" width="579" height="772">
         <p style="text-align: left;"> Madeleine Stone is a third-year student at Howard Community College who is currently majoring in Audio Video Media Production with a goal of obtaining a job that includes sound mixing and video editing. Her love of music stemmed from her early childhood when she would listen to different jazz artists at night as a way for her to sleep better. That love only grew as time passed and she participated in different choir groups for a total of nine years. Those years really helped her understand the different emotions certain songs could provoke. She started to explore the concept of video editing and sound mixing in 2019 when the huge pandemic hit.</p>
-        <p style="text-align: left;"> Being able to combine different videos with various audios started out as a way to pass time but then led to something greater. In the spring of 2023 was when she opened her mind up to the idea of getting a career in the video production field.<br>She started attending HCC and had multiple courses relating to sound mixing, video editing, storyboarding, and other<br>topics related to video production. Two years later she has used the skills that she obtained from all her courses in some<br>projects for school as well as personal projects as well. Her goals include expanding her professional network, collaborating<br>with experienced sound designers and mixers, as well as creating a lasting and impactful legacy through her work. Madeleine hopes to provoke insightful stories and emotions through her sound editing and audio engineering work. </p>
+        <p style="text-align: left;"> Being able to combine different videos with various audios started out as a way to pass time but then led to something greater. In the spring of 2023 was when she opened her mind up to the idea of getting a career in the video production field. She started attending HCC and had multiple courses relating to sound mixing, video editing, storyboarding, and other topics related to video production. Two years later she has used the skills that she obtained from all her courses in some projects for school as well as personal projects as well. Her goals include expanding her professional network, collaborating with experienced sound designers and mixers, as well as creating a lasting and impactful legacy through her work. Madeleine hopes to provoke insightful stories and emotions through her sound editing and audio engineering work. </p>
 </header>
 
     <header class="w3-panel w3-center" style="padding:10px 16px">
