--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@ h5 {letter-spacing: 1px}
   </div>
   </header>
 
+  <header class="w3-panel w3-center" style="padding:10px 16px"><b>
+    <video width="640" height="360" align=center
+    poster="bifscthumbnail.jpg" controls>
+      <source src="MStone_Trail_Of_Light_FinalEdit.mp4" type="video/mp4">
+      </video><br>
+      <video width="480" height="270"
+      poster="60SecondFilmChallenge.jpg" controls>
+        <source src="MaddyStone_SinkingTime_Montage.mp4" type="video/mp4">
+        </video>
+  </header>
+</header>
+
   <header class="w3-panel w3-center w3-border-top w3-border-black" style="padding:10px 16px">
     <h2 class="w3-xlarge">CONNECT WITH ME ONLINE</h2>
     <a href = "mailto:madeleine15.stone@gmail.com" target="_blank" class="w3-hover-text-green">madeleine15.stone@gmail.com</a><br>
