--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@ h5 {letter-spacing: 1px}
 
   <header class="w3-panel w3-center" style="padding:10px 16px"><b>
     <h2 class="w3-xlarge">BIFSC FILM PROJECT: AUDIO PRODUCTION</h2>
-    <p style="text-align: center;"> During my Audio Production 1 class, we participated in the BIFSC Film Project Challenge, where we created audio for a silent film, focusing on mood<br>and emotion. A challenge I faced during<br>this project was finding exact sounds that made the film as realistic as possible.</p>
+    <p style="text-align: center;"> During my Audio Production 1 class, we participated in the BIFSC Film Project Challenge, where we created audio for a silent film, focusing on mood<br>and emotion. A challenge I faced during this project was finding exact sounds that made the film as realistic as possible.</p>
     <video width="640" height="360" align=center
     poster="bifscthumbnail.jpg" controls>
       <source src="MStone_Trail_Of_Light_FinalEdit.mp4" type="video/mp4">
       </video><br>
+    </header>
+    <header class="w3-panel w3-center" style="padding: 10px 16px"><b>
+      <h2 class="w3-large">60 SECOND FILM CHALLENGE</h2>
       <video width="480" height="270"
       poster="60SecondFilmChallenge.jpg" controls>
         <source src="MaddyStone_SinkingTime_Montage.mp4" type="video/mp4">
