--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ h5 {letter-spacing: 1px}
       </video><br>
     </header>
     <header class="w3-panel w3-center" style="padding: 10px 16px"><b>
-      <h2 class="w3-large">60 SECOND FILM CHALLENGE</h2>
+      <h2 class="w3-large">60 SECOND FILM CHALLENGE: PRINCIPLES OF VIDEO EDITING</h2>
+      <p style="text-align: center;">
       <video width="480" height="270"
       poster="60SecondFilmChallenge.jpg" controls>
         <source src="MaddyStone_SinkingTime_Montage.mp4" type="video/mp4">
