--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ h5 {letter-spacing: 1px}
     </header>
     <header class="w3-panel w3-center" style="padding: 10px 16px"><b>
       <h2 class="w3-large">60 SECOND FILM CHALLENGE: PRINCIPLES OF VIDEO EDITING</h2>
-      <p style="text-align: center;">
+      <p style="text-align: center;"> This was my first challenge for Principles of Video Editing. We were tasked with creating our own story while choosing from a limited amount of clips. We were also allowed to include our own personal clips in addition to mixing with a variety of sound effects. The main challenge I faced was finding appropriate clips that could accurately portray the story I wanted to tell.</p>
       <video width="480" height="270"
       poster="60SecondFilmChallenge.jpg" controls>
         <source src="MaddyStone_SinkingTime_Montage.mp4" type="video/mp4">
