--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,7 @@ h5 {letter-spacing: 1px}
 <header class="w3-panel w3-center" style="padding: 10px 16px"><b>
   <h2 class="w3-large">GAMING AUDIO: SOUND DESIGN</h2>
   <p style="text-align: center;"> When I took the Sound Design course, one of our assignments challenged us to choose a provided scenario or prompt and to research the specific artist associated with the prompt. The end result was a two-minute track inspired by the selected artist and prompt. The greatest challenges I experienced was learning how to create my own sound while still being inspired by Funkadelic.</p>
+  <audio controls>
     <source src="Stone-Game4_.wav" type="audio/wav">
    </audio>
 
