--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
 body,h2 {font-family: "Raleway Bold", Arial, sans-serif}
+h2 {background-color: lightblue;}
 h2 {letter-spacing: 6px}
 h2 {opacity: 1.0}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
@@ -31,7 +32,7 @@ h5 {letter-spacing: 1px}
 
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
-    <h5>  <a href="index.html" class="w3-bar-item w3-button w3-blue">Home</a>
+    <h5>  <a href="index.html" class="w3-bar-item w3-button">Home</a>
       <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
       <a href="aboutme.html" class="w3-bar-item w3-button">About Me</a>
 <h5> </div>
