--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,7 @@ h3 {opacity: 1.0}
 h3 {text-align: center}
 body,h5 {font-family: "Raleway", Arial, sans-serif}
 h5 {letter-spacing: 1px}
+h5 {background-color: lightpink;}
 p {font-size: 16px;}
 .w3-row-padding img {margin-bottom: 12px}
 img {
