--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@ h5 {background-color: lightpink;}
 </header>
 
 <header class="w3-panel w3-center" style="padding: 10px 16px"><b>
-  <h2 class="w3-large">CHLOE SCREENWRITE</h2>
+  <h2 class="w3-large">CHLOE SCREENPLAY</h2>
   <p style="text-align: center;"> During the course Writing for Film/Broadcast, I worked on writing my very first screen writing play. Over the course of 15 weeks, I learned how to write a logline, develop characters and their own sub-plots, all to enhance the overall plot of my story. Some of the challenges that I faced during this project included ensuring that each character had their own personality that did not take away from the plot.</p>
   <a href ="ChloeFinalDraft - Copy.pdf" target="_blank" class="w3-hover-text-green">link to script</a>
 </header>
